# formula-one-analytics-platform

./: .gitignore  main.py  pyproject.toml
src/extract/: extract_constructors.py  extract_drivers.py  extract_races.py  f1_client.py
tests/: test_extract.py
