[project]
name = "formula-one-analytics-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "requests>=2.34.2",
]
